# Paper2

./: .gitignore  README.md  VERSION_LOCK_V13.md  pyproject.toml
dataset/: README.md  dataset_summary.json  doi_list_all_3611.csv  doi_list_kg_used_2497_with_reaction_system.csv  required_seed_papers_for_rerun.csv
outputs/step2_causal_kg_v8_paper_reaction_system/: ANODE_REEXTRACT_REPORT.md  NORMALIZATION_REPORT.md  PAPER_REACTION_SYSTEM_REPORT.md  R7_ANODE_RING_AUDIT.md  anode_reextract_dry_run_report.json  anode_reextract_report.json  anode_reextract_run.stdout.json  dry_run_stdout.json  kg_causal_view.html  kg_edges.csv  kg_relation_definitions.csv  kg_relation_definitions.json  kg_summary.json  normalization_report.json  paper_reaction_system.csv  paper_reaction_system_report.json
outputs/step3_reasoning_v13_paper_reaction_system_full_diagnosis/: STEP3_QUALITY_REPORT.md  V12_V13_PAPER_REACTION_SYSTEM_COMPARISON.md  quality_report.json  replay_summary.json
outputs/step3_reasoning_v13_paper_reaction_system_full_diagnosis/rounds/R1/: D3_build_sheet.json  D3_build_sheet.md  (+4 more)
reactor_agent/: __init__.py  contracts.py  llm.py  retrieval.py
reactor_agent/config/: synonym_map.json
reactor_agent/steps/: __init__.py  kg.py  kg_anode_reextract.py  kg_corr_reextract.py  kg_normalize.py  kg_paper_reaction_system.py  kg_reaction_system.py  kg_visualize.py  literature.py  reasoning.py  reasoning_retrieval.py  retrieval_ablation.py
tests/: test_kg.py  test_kg_normalize.py  test_llm.py  test_reaction_system.py  test_reasoning.py  test_retrieval_ablation.py  test_step1.py
(+36 files in other folders)
