[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reactor-agent"
version = "0.1.0"
description = "Reactor workflow Step 1 literature database builder"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["reactor_agent*"]
